--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,18 @@
 <resources>
     <string name="app_name">TodoApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_todo">add_todo</string>
+    <string name="add_task">Add task</string>
     <string name="please_input_name_of_task">Please input name of task</string>
-    <string name="todo_is_exists">This Todo already exists</string>
+    <string name="task_is_exists">This Task already exists</string>
     <string name="input_task">Input task</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
-    <string name="add_success">Add todo success</string>
+    <string name="add_success">Add task success</string>
     <string name="update">Update</string>
-    <string name="edit_success">Edit todo success</string>
-    <string name="are_you_sure_delete_todo">Are you sure delete todo?</string>
-    <string name="delete_success">Delete todo success</string>
+    <string name="edit_success">Edit task success</string>
+    <string name="are_you_sure_delete_task">Are you sure delete task?</string>
+    <string name="delete_success">Delete task success</string>
     <string name="confirm">Confirm</string>
-    <string name="title_todo">Todo: %1$s</string>
+    <string name="title_task">Task: %1$s</string>
     <string name="title_complete">Complete: %1$s</string>
 </resources>
